Use .get(0) instead of getFirst